2009-02-18  Akira TAGOH  <tagoh@redhat.com>

	Add Xfconf support. (RHBZ#478669)

	* backends/xfce_xfconf/imsettings-xfce-helper.desktop.in:
	* backends/xfce_xfconf/main.c:
	* backends/xfce\xfconf/Makefile.am: New.

2009-02-16  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_471833.c: add new testcase.

	* src/monitor.c (_imsettings_monitor_lookup): set an error if no
	return value.
	(imsettings_monitor_lookup): use stocked directory name instead of
	hardcoded one.

2009-02-13  Akira TAGOH  <tagoh@redhat.com>

	Allow a lowercase input method name. (RHBZ#471833)
	
	* utils/imsettings-list.c (main): display the xinput conf name
	in the list too.

	* src/monitor.c (imsettings_monitor_add_file): allow a lower-case name
	to look up the name.
	(imsettings_monitor_remove_file): likewise.
	(imsettings_monitor_get_current_user_im): likewise.
	(imsettings_monitor_get_current_system_im): likewise.
	(_imsettings_monitor_lookup): new.
	(imsettings_monitor_lookup): try to look up IM with .conf to allow
	xinput conf name.

2009-01-21  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: update to support xfconf and mcs separately.

	Integrated im-info-daemon into im-settings-daemon.

	* applet/main.c: get rid of the dbus interface no longer used.

	* imsettings/imsettings.xml: integrate methods from
	/com/redhat/imsettings/IMINfo to /com/redhat/imsettings.

	* imsettings/imsettings.h: bump API version.

	* imsettings/imsettings-observer.c: clean up obsolete DBus APIs.

	* imsettings/imsettings-request.c: likewise.

	* src/monitor.[ch]: new to deal with monitoring files.

	* src/factory.c: integrate methods from factory_info.c

	* utils/imsettings-list.c (main): get rid of the dbus interface
	no longer used.

	* utils/imsettings-info.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-reload.c (main): likewise.

	* tests/rhbz_455363.c (setup): likewise.
